--- a/roboshop/Makefile
+++ b/roboshop/Makefile
@@ -4,3 +4,19 @@ mongodb:
 	bash components/mongodb.sh
 frontend:
 	bash components/frontend.sh
+catalogue:
+	bash components/catalogue.sh
+redis:
+	bash components/redis.sh
+mysql:
+	bash components/mysql.sh
+shipping:
+	bash components/shipping.sh
+user:
+	bash components/user.sh
+rebitmq:
+	bash components/rebitmq.sh
+payment:
+	bash components/payment.sh
+dispatch:
+	bash components/dispatch.sh
