Update all services

--- a/roboshop/Makefile
+++ b/roboshop/Makefile
@@ -1,29 +1,12 @@
-cart:
-	bash components/cart.sh
-mongodb:
-	bash components/mongodb.sh
 frontend:
 	bash components/frontend.sh
+mongodb:
+	bash components/mongodb.sh
 catalogue:
 	bash components/catalogue.sh
-redis:
-	bash components/redis.sh
-mysql:
-	bash components/mysql.sh
-shipping:
-	bash components/shipping.sh
-user:
-	bash components/user.sh
-rebitmq:
-	bash components/rebitmq.sh
-payment:
-	bash components/payment.sh
+cart:
+	bash components/cart.sh
 dispatch:
 	bash components/dispatch.sh
-
-frontend_new:
-	bash components/frontend_new.sh
-mongodb_new:
-	bash components/mongodb_new.sh
-catalogue_new:
-	bash components/catalogue_new.sh
+catalogue:
+	bash components/catalogue.sh
