--- a/roboshop/Makefile
+++ b/roboshop/Makefile
@@ -1,12 +1,22 @@
+cart:
+	bash components/cart.sh
+catalogue:
+	bash components/catalogue.sh
+dispatch:
+	bash components/dispatch.sh
 frontend:
 	bash components/frontend.sh
 mongodb:
 	bash components/mongodb.sh
-catalogue:
-	bash components/catalogue.sh
-cart:
-	bash components/cart.sh
-dispatch:
-	bash components/dispatch.sh
-catalogue:
-	bash components/catalogue.sh
+mysql:
+	bash components/mysql.sh
+payment:
+	bash components/payment.sh
+rebbimq:
+	bash components/rebbitmq.sh
+redis:
+	bash components/redis.sh
+shipping:
+	bash components/shipping.sh
+user:
+	bash components/user.sh
